--- a/chatty_server/package.json
+++ b/chatty_server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "chatty_server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,7 @@
   "dependencies": {
     "express": "4.16.1",
     "ws": "3.2.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
